# sipha

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  PULL_REQUEST_TEMPLATE.md  README.md  json_grammar_docs.md  out
crates/sipha/: Cargo.toml  README.md
crates/sipha/benches/: comparison_bench.rs  memory_bench.rs  parsing_bench.rs
crates/sipha/examples/: basic_arithmetic.rs  config_parser.rs  glr_parsing.rs  grammar_dsl.rs  incremental_lexing.rs  incremental_parsing.rs  json_grammar_docs.rs  json_parser.rs  peg_parsing.rs  performance_tuning.rs  simple_calculator.rs  sql_parser.rs
crates/sipha/src/: lib.rs
crates/sipha/src/arena/: mod.rs  tree_arena.rs
crates/sipha/src/backend/: common.rs  mod.rs  optimizer.rs  pipeline.rs  traits.rs
crates/sipha/src/backend/earley/: chart.rs  config.rs  mod.rs  parser.rs  state.rs
crates/sipha/src/backend/glr/: disambiguation.rs  driver.rs  forest.rs  grammar.rs  mod.rs  optimizer.rs  parser.rs  recovery.rs  stack.rs  state.rs  transformer.rs
crates/sipha/src/backend/ll/: config.rs  driver.rs  grammar.rs  mod.rs  optimizer.rs  parser.rs  recovery.rs  table.rs  transformer.rs
crates/sipha/src/backend/lr/: config.rs  driver.rs  grammar.rs  mod.rs  optimizer.rs  parser.rs  recovery.rs  state.rs  table.rs  transformer.rs
crates/sipha/src/backend/peg/: config.rs  driver.rs  grammar.rs  mod.rs  optimizer.rs  parser.rs  recovery.rs  state.rs  transformer.rs
crates/sipha/src/backend/pratt/: config.rs  grammar.rs  mod.rs  optimizer.rs  parser.rs  (+3 more)
crates/sipha/src/error/: diagnostics.rs  mod.rs
crates/sipha/src/grammar/: analysis.rs  analyzer.rs  builder.rs  capture.rs  core_expr.rs  docs.rs  expr.rs  extended_expr.rs  hint.rs  mod.rs  predicate.rs  token_class.rs  validate.rs
crates/sipha/src/incremental/: cache.rs  mod.rs
crates/sipha/src/intern/: mod.rs
crates/sipha/src/lexer/: builder.rs  dfa.rs  incremental.rs  mod.rs  simd.rs  stream.rs  token.rs
crates/sipha/src/parser/: driver.rs  engine.rs  mod.rs  parallel.rs  recovery.rs
crates/sipha/src/syntax/: ast.rs  builder.rs  cursor.rs  diff.rs  editor.rs  green.rs  kind.rs  line_col.rs  mod.rs  pretty.rs  query.rs  red.rs  source_map.rs  text.rs  utils.rs  visitor.rs
crates/sipha/src/testing/: generators.rs  mod.rs  snapshot.rs
crates/sipha/tests/: cache_tests.rs  capture_tests.rs  earley_parser_tests.rs  error_helpers.rs  glr_parser_tests.rs  grammar_tests.rs  incremental_lexing_tests.rs  incremental_tests.rs  integration_tests.rs  lexer_tests.rs  lr_parser_tests.rs  parallel_parsing_tests.rs  peg_parser_tests.rs  property_tests.rs  transformation_tests.rs
crates/sipha_derive/: Cargo.toml
crates/sipha_derive/src/: codegen.rs  lib.rs  parser.rs
crates/sipha_lsp/: Cargo.toml
crates/sipha_lsp/src/: conversions.rs  lib.rs
crates/sipha_lsp_server/: Cargo.toml  README.md
crates/sipha_lsp_server/src/: handlers.rs  lib.rs  server.rs  session.rs
crates/sipha_tools/: Cargo.toml  README.md
crates/sipha_tools/src/: cli.rs  extract.rs  lib.rs  main.rs  visualize.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: engine_parse.rs  glr_parser_fuzz.rs  incremental_fuzz.rs  incremental_reparse.rs  json_parse.rs  jsonc_parse.rs  lr_parser_fuzz.rs  macro_parse.rs  memo_equivalence.rs  parser_fuzz.rs  peg_parser_fuzz.rs  unicode_parse.rs
fuzz/src/: grammars.rs  lib.rs
sipha/: Cargo.toml  README.md
sipha-analysis/: Cargo.toml  README.md
sipha-analysis/src/: definitions.rs  scope_extents.rs
sipha-diff/: Cargo.toml  README.md
sipha-diff/src/: lib.rs
sipha-display/: Cargo.toml  README.md
sipha-display/examples/: display_grammar.rs
sipha-display/src/: graph.rs  lib.rs  peg.rs
sipha-fmt/: Cargo.toml  README.md
sipha-fmt/src/: lib.rs
sipha-macros/: Cargo.toml  README.md
sipha-macros/src/: ast_enum.rs  ast_node.rs  ir.rs  lex_kinds.rs  lib.rs  lower.rs  parse.rs  rule_kinds.rs  syntax_kinds.rs
sipha-sourcemap/: Cargo.toml  README.md
sipha-sourcemap/src/: lib.rs
sipha/benches/: parse.rs
sipha/docs/: COOKBOOK.md
sipha/examples/: arithmetic_expr.rs  context_flags.rs  display_grammar.rs  grammar_dsl.rs  green_red_tree.rs  incremental_reparse.rs  ini_grammar.rs  json_grammar.rs  json_jsonc.rs  lsp_diagnostics.rs  macro_grammar.rs  miette_errors.rs  parse_any_rule_typed_cst.rs  parsed_doc_errors.rs  sublanguage_markdown_json.rs  tiny_lang_recovery.rs  unicode_and_repeat.rs
sipha/src/: builder.rs  capture.rs  codegen.rs  context.rs  emit.rs  engine.rs  error.rs  expr.rs  green.rs  green_builder.rs  incremental.rs  insn.rs  lib.rs  line_index.rs  memo.rs  miette_support.rs  parsed_doc.rs  red.rs  sexp.rs  simd.rs  source_map.rs  transform.rs  tree_display.rs  trivia.rs  types.rs  utf16.rs  walk.rs
sipha/src/diagnostics/: error.rs  grammar_names.rs  line_index.rs  lsp.rs  miette_support.rs  mod.rs  parsed_doc.rs  source_map.rs  utf16.rs
sipha/src/extras/: diff.rs  fmt.rs  mod.rs  sourcemap.rs
sipha/src/extras/analysis/: definitions.rs  mod.rs  scope_extents.rs
sipha/src/extras/display/: disasm.rs  graph.rs  mod.rs  peg.rs
sipha/src/extras/patterns/: comments.rs  mod.rs  strings.rs  unicode.rs
sipha/src/parse/: builder.rs  capture.rs  context.rs  expr.rs  graph_optimize.rs  incremental.rs  insn.rs  lexer_batch.rs  memo.rs  mod.rs  parallel.rs  parallel_units.rs  parse_to_doc.rs  partial_reparse.rs  simd.rs  string_table.rs  sublanguage.rs
sipha/src/parse/codegen/: grammar.rs  header.rs  insns.rs  mod.rs  tables.rs
sipha/src/parse/engine/: dispatch.rs  engine_impl.rs  error.rs  flags.rs  frames.rs  mod.rs  observer.rs  output.rs  trace.rs  tracer.rs  tree_events.rs  utf8.rs  vm.rs
sipha/src/tree/: ast.rs  emit.rs  green.rs  green_builder.rs  mod.rs  red.rs  sexp.rs  transform.rs  tree_display.rs  trivia.rs  walk.rs
sipha/tests/: diagnostics.rs  expr_tree.rs  integration_parse.rs  lexer_batch.rs  prop_equivalence.proptest-regressions  prop_equivalence.rs  prop_incremental_equivalence.rs  recovery_multi.rs  sublanguage_embed.rs
sipha/tests/common/: grammar.rs  helpers.rs  mod.rs
(+84 files in other folders)
