[package]
name = "sipha-fuzz"
version = "1.0.0"
edition = "2024"
description = "Fuzzing targets for Sipha parser library"
license = "MIT"
repository = "https://github.com/nyaleph/sipha"
readme = "README.md"
keywords = ["parser", "parsing", "fuzzing"]
categories = ["parsing", "development-tools"]

[package.metadata]
cargo-fuzz = true

[lints]
workspace = true

[dependencies]
sipha = { path = "../crates/sipha", features = ["backend-ll", "backend-lr", "backend-peg", "backend-glr"] }
libfuzzer-sys = "0.4"
compact_str = "0.9"

[[bin]]
name = "parser_fuzz"
path = "fuzz_targets/parser_fuzz.rs"
test = false

[[bin]]
name = "incremental_fuzz"
path = "fuzz_targets/incremental_fuzz.rs"
test = false

[[bin]]
name = "glr_parser_fuzz"
path = "fuzz_targets/glr_parser_fuzz.rs"
test = false

[[bin]]
name = "lr_parser_fuzz"
path = "fuzz_targets/lr_parser_fuzz.rs"
test = false

[[bin]]
name = "peg_parser_fuzz"
path = "fuzz_targets/peg_parser_fuzz.rs"
test = false

