[package]
name = "sipha-diff"
version = "2.0.0"
edition = "2021"
description = "Tree diff and comparison utilities for sipha syntax trees"
license = "MIT"
repository = "https://github.com/sipha-parser/sipha"
homepage = "https://github.com/sipha-parser/sipha"
documentation = "https://docs.rs/sipha-diff"

[lints]
workspace = true

[dependencies]
sipha = { path = "../sipha", version = "2.0", features = ["emit"] }
