[package]
name = "sipha-fmt"
version = "2.0.0"
edition = "2021"
description = "Formatter options and helpers for sipha syntax trees"
license = "MIT"
repository = "https://github.com/sipha-parser/sipha"
homepage = "https://github.com/sipha-parser/sipha"
documentation = "https://docs.rs/sipha-fmt"

[lints]
workspace = true

[dependencies]
sipha = { path = "../sipha", version = "2.0", features = ["emit"] }
