[package]
name = "sipha-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for defining sipha PEG grammars"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
