[package]
name = "sipha-macros"
version = "2.0.0"
edition = "2021"
description = "Procedural macros for defining sipha PEG grammars"
license = "MIT"
repository = "https://github.com/sipha-parser/sipha"
homepage = "https://github.com/sipha-parser/sipha"
documentation = "https://docs.rs/sipha-macros"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
