[package]
name = "sipha-sourcemap"
version = "1.0.0"
edition = "2021"
description = "Build span mappings from sipha transforms (map transformed spans back to original source)"
license = "MIT"
repository = "https://github.com/sipha-parser/sipha"
homepage = "https://github.com/sipha-parser/sipha"
documentation = "https://docs.rs/sipha-sourcemap"

[lints]
workspace = true

[dependencies]
sipha = { path = "../sipha", version = "1.0", features = ["transform"] }
