[package]
name = "sipha"
version = "3.0.0"
edition = "2024"
rust-version = "1.85"
description = "PEG parser, syntax trees, and code generation"
license = "MIT"
repository = "https://github.com/sipha-parser/sipha"
homepage = "https://github.com/sipha-parser/sipha"
documentation = "https://docs.rs/sipha"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["std", "walk"]
std = ["dep:lasso", "dep:memchr"]
walk = ["std"]
incremental = ["std"]
parallel = ["std", "dep:rayon"]
partial-reparse = ["std", "incremental"]
experimental_parallel_units = ["parallel", "partial-reparse"]
emit = ["walk"]
transform = []
miette = ["dep:miette"]
utf16 = []
lsp = ["std", "utf16", "dep:lsp-types"]
analysis = ["walk"]
display = ["std"]
sourcemap = ["transform"]
fmt = ["emit"]
diff = ["emit"]
codegen-pretty = ["dep:prettyplease", "dep:syn"]
patterns = ["std"]
trace = []

[dependencies]
sipha-macros = { path = "../sipha-macros", version = "3.0" }
miette = { version = "7", optional = true }
lsp-types = { version = "0.97", optional = true }
proc-macro2 = "1"
quote = "1"
prettyplease = { version = "0.2", optional = true }
syn = { version = "2", default-features = false, features = ["full", "parsing"], optional = true }
lasso = { version = "0.7", optional = true }
memchr = { version = "2", optional = true }
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "parse"
harness = false

[[example]]
name = "arithmetic_expr"
required-features = ["std"]

[[example]]
name = "grammar_dsl"
required-features = ["std"]

[[example]]
name = "ini_grammar"
required-features = ["std"]

[[example]]
name = "sublanguage_markdown_json"
required-features = ["std"]

[[example]]
name = "tiny_lang_recovery"
required-features = ["std"]

[[example]]
name = "parse_any_rule_typed_cst"
required-features = ["std"]

[[example]]
name = "lsp_diagnostics"
required-features = ["lsp"]
